# evaluations

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: adding_new_eval.md  architecture.md  contributing_evals.md
evals/: __init__.py  api.py  base.py  data.py  data_test.py  formatting.py  metrics.py  record.py  registry.py  task_state.py
evals/cli/: __init__.py  oaieval.py  oaievalset.py
evals/completion_fns/: __init__.py  base.py  solver_completion_fn.py
evals/elsuite/: __init__.py
evals/elsuite/energy/: __init__.py  comparison.py
evals/elsuite/hardware/: __init__.py  fixed_point.py
evals/elsuite/hdc/: __init__.py  classification.py  robustness.py
evals/elsuite/prompt/: __init__.py  arthedain_adapter.py  base.py
evals/elsuite/registry/: __init__.py
evals/elsuite/snn/: __init__.py  ablation.py  bci_decoding.py  force2_benchmark.py
evals/elsuite/solvers/: __init__.py
evals/elsuite/utils/: __init__.py  data.py
evals/tests/: __init__.py  test_api.py  test_base.py  test_elandf_evals.py  test_metrics.py
examples/: basic_usage.py
