[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "evaluations"
version = "0.1.0"
description = "Open-source registry of benchmarks for SNN and HDC systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aiden Young"},
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"

[tool.black]
target-version = ["py39"]
line-length = 88